[gd_scene load_steps=3 format=2]

[ext_resource path="res://Start.gd" type="Script" id=1]
[ext_resource path="res://Main.tscn" type="PackedScene" id=2]

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.55426
margin_bottom = -0.55426
script = ExtResource( 1 )
next_scene = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -38.0
margin_right = 176.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 352.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 101.0
margin_bottom = 19.0
text = "Player 1 Name: "

[node name="Player1Input" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 105.0
margin_right = 352.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Player 1"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 352.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 101.0
margin_bottom = 19.0
text = "Player 2 Name: "

[node name="Player2Input" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 105.0
margin_right = 352.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Player 2"

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 352.0
margin_bottom = 76.0
text = "Start"
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
